fixed img broken in the five section

--- a/css/styles.css
+++ b/css/styles.css
@@ -683,7 +683,7 @@ a {
 }
 
 .section-five-item4 {
-  background-image: url(/image/section-five-item4-img.jpg);
+  background-image: url(../image/section-five-item4-img.jpg);
 }
 
 .section-five-item5 {
